--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+html {height: 100%;}
 body {
-  background: #A3D5D5;
+  background: linear-gradient(160deg, rgba(163,213,213,1) 0%, rgba(0,177,213,1) 100%);
+  height: 100%;
+}
+.main-title {
+  font: Arial;
+  font-size: 40px;
+  text-align: center;
+  text-decoration: underline;
 }
 
 .profile-pill {
@@ -10,6 +18,7 @@ body {
   transition: 0.8s;
   display: flex;
   justify-content: center;
+  margin: auto;
 }
 .profile-pill:hover {
   transition: 0.6s;
